pulse-web.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pulse-sample-app
  namespace: pulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulse-sample-app
  template:
    metadata:
      labels:
        app: pulse-sample-app
    spec:
      containers:
      - name: pulse-sample-app
        image: yoon327/pulse-sample-app:v3  # 🌟 이미지는 그대로 두고
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
  strategy:
    canary:
      analysis:
        templates:
        - templateName: pulse-error-rate-check
        # -------------------------------------------------------------
        # 💣 [시한폭탄 설치] 에러 수가 "음수(-100개)"여야만 통과되도록 조작!
        # 일반적인 상황(에러 0개)에서는 무조건 "불합격" 처리됩니다.
        # -------------------------------------------------------------
        args:
        - name: successCondition
          value: "result[0] < -100"
      steps:
      - setWeight: 50                     # 반반 트래픽 상황에서 검문 시작!
      - pause: {duration: 10s}            # 10초 동안 관제탑 쿼리 감시
